// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clipboard error 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-left: 72px;
  margin-right: 72px;
  margin-top: 8px;
  margin-bottom: 8px;
  background: #f50057;
  color: #FFFFFF;
  align-self: center;
  min-width: 450px;
}

.c11 a {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
      kind="danger"
    >
      clipboard error
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`connected settings false 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connected settings true 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Directory Sharing Enabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connection error 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-left: 72px;
  margin-right: 72px;
  margin-top: 8px;
  margin-bottom: 8px;
  background: #f50057;
  color: #FFFFFF;
  align-self: center;
  min-width: 450px;
}

.c11 a {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
      kind="danger"
    >
      some connection error
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`disconnected 1`] = `
.c11 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
    >
      <div
        class="c12"
      >
        Session successfully disconnected
      </div>
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`fetch error 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-left: 72px;
  margin-right: 72px;
  margin-top: 8px;
  margin-bottom: 8px;
  background: #f50057;
  color: #FFFFFF;
  align-self: center;
  min-width: 450px;
}

.c11 a {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
      kind="danger"
    >
      some fetch  error
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`unintended disconnect 1`] = `
.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-left: 72px;
  margin-right: 72px;
  margin-top: 8px;
  margin-bottom: 8px;
  background: #f50057;
  color: #FFFFFF;
  align-self: center;
  min-width: 450px;
}

.c11 a {
  color: #FFFFFF;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
      kind="danger"
    >
      Session disconnected for an unknown reason
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`webauthn prompt 1`] = `
.c11 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c9 .c5 {
  color: inherit;
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover,
.c9:focus {
  background: rgba(255,255,255,0.1);
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c8 {
  font-weight: 600;
  font-size: 18px;
  align-self: 'center';
}

.c7 {
  font-weight: 600;
  font-size: 22px;
  align-self: 'center';
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c2"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <span
            class="c5 c6 icon icon-folder-shared c7"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c5 c6 icon icon-clipboard-text c8"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
        </div>
        <div
          class="c4"
        >
          <button
            class="c9"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c5 c10 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c11"
    />
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;
